<resources>
    <!--Activities label-->
    <string name="settings_label">Profile Settings</string>

    <string name="app_name">Voice</string>
    <string name="sign_in_button">Sign-in</string>
    <string name="register_button">Register Here</string>
    <string name="username_hint">Your name</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">E-mail</string>
    <string name="cities_lived_in_hint">Cities lived in &#8230;</string>
    <string name="new_user_registration_text">Don\'t have an account with us?</string>
    <string name="invalid_user_pass_message">Invalid username/password entered. Please try again.</string>
    <string name="reset_pass_button">Click here to reset your password.</string>

    <string name="create_account_title">Local cities</string>
    <!--Your visits in these cities will be anonymously marked "Local Visit".-->
    <string name="create_account_message">Type the cities where you have lived or currently living.</string>
    <string name="create_username_title">Name</string>
    <string name="create_username_message">Your name will only be displayed in the check-ins where you have revealed yourself.</string>
    <string name="register">Continue</string>
    <string name="skip">Clear Shared Preferences</string>
    <string name="save_settings_button">Save</string>
    <string name="check_in_button">Check-in</string>
    <string name="profile_button">Profile</string>


    <string name="voice_logo">Voice</string>
    <string name="local_cities_title">Profile Settings</string>
    <string name="log_out">Log Out</string>

    <string name="switch_reveal_title">Reveal Name</string>
    <string name="switch_reveal_desc">Your name will be displayed in the guests list</string>
    <string name="upvote_reveal_title">Like the place</string>
    <string name="upvote_reveal_desc">Tell the community you liked this place</string>
    <string name="comment_tittle">Leave a review for this place (optional)</string>
    <string name="comment_hint">Comment...</string>
    <string name="comment_send">Finish</string>
    <string name="check_in_up_vote">Up-voted</string>
    <string name="check_in_down_vote">Down-voted</string>
    <string name="title_comments_list_popoup">Reviews</string>
    <string name="close_button">Close</string>
    <string name="review_place_details">Reviews</string>
    <string name="tourist_visitors_place_details">Tourist Visitors</string>
    <string name="local_visitors_place_details">Local Visitors</string>
    <string name="guest_book_title">Guest Book</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_osm">OSM Map</string>
    <string name="title_activity_osmactivity">OSMActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_profile">User Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="check_in_fab_description">Starts the Check In Cycle</string>
    <string name="menu_check_in">Check In</string>
    <string name="title_activity_check_in">CheckInActivity</string>

    <string name="search_title">Search for a Place</string>
    <string name="check_in_search_hint">Search nearby..</string>
    <string name="check_in_search_Title">Search Nearby</string>
    <string name="onBoarding_label">On Boarding</string>
    <string name="title_onBoarding_one">Raise your Voice &amp; let the world know!</string>
    <string name="subheading_onBoarding_one">Share you favorites spots in town &amp; discover new spots when you Travel!</string>
    <string name="get_started">GET STARTED</string>
    <string name="title_onBoarding_two">As a tourist, Discover exciting places near you!</string>
    <string name="subheading_onBoarding_two">See what all the hype is about \nRead reviews by locals or other tourists \nFinally Check In and share your experience!</string>
    <string name="title_onBoarding_three">Want to Check-In or Search Anonymously?</string>
    <string name="subheading_onBoarding_three">Great, you can choose to be Anonymous! \nYour data is protected with us</string>
    <string name="securityLockContentDescription">securityLock</string>
    <string name="voiceRibbonContentDescription">voiceRibbon</string>
    <string name="voiceManIconContentDescription">VoiceManIcon</string>
    <string name="voiceLogoContentDescription">voiceLogo</string>
    <string name="my_hometown_prompt">MY HOMETOWN 🏠</string>
    <string name="update_your_local_city">* Update your local city!</string>
    <string name="update">UPDATE</string>
    <string name="enter_your_current_city">Enter your current city.</string>
    <string name="add_local_city_prompt">* Check In as a Local, add your current home city!</string>
    <string name="place_list_prompt">Select a place to Check In or view Place details</string>
    <string name="places_list_prompt_heading">Nearby Places</string>
    <string name="app_colors_bar">app colors bar</string>
    <string name="reviews_button">Reviews</string>
    <string name="current_location_fab_description">"Current location "</string>
    <string name="location_permission_denied">Location Permission Denied!</string>
    <string name="location_permission_available">Location Permission Granted!</string>
    <string name="location_permission_required">To search for places near you, we need your permission!</string>
    <string name="ok">Ok</string>
    <string name="location_unavailable">Location Unavailable!</string>
    <string name="show_list">Show List</string>
    <string name="view_comments_osm">VIEW</string>

</resources>
