<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/place_check_in_window"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/check_in_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:textSize="@dimen/titleTextSize"
            android:textColor="@color/primary_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/check_in_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textSize="@dimen/bodyTextSize"
            android:textColor="@color/secondary_text"
            app:layout_constraintTop_toBottomOf="@id/check_in_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/revealTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_reveal_title"
            android:layout_margin="20dp"
            android:textSize="@dimen/bodyTextSize"
            app:layout_constraintTop_toBottomOf="@id/check_in_address"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/revealDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_reveal_desc"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:maxWidth="230dp"
            android:textSize="@dimen/descTextSize"
            android:textColor="@color/secondary_text"
            app:layout_constraintTop_toBottomOf="@id/revealTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/userVisibilitySwitchButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/userVisibilitySwitchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/accent"
            android:ellipsize="end"
            android:gravity="right"
            app:layout_constraintTop_toTopOf="@id/revealTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>

        <TextView
            android:id="@+id/upvoteTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upvote_reveal_title"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textSize="@dimen/bodyTextSize"
            app:layout_constraintTop_toBottomOf="@id/revealDesc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/upvoteDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upvote_reveal_desc"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            android:maxWidth="230dp"
            android:textSize="@dimen/descTextSize"
            android:textColor="@color/secondary_text"
            app:layout_constraintTop_toBottomOf="@id/upvoteTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/upVoteToggleButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0" />

        <ToggleButton
            android:id="@+id/upVoteToggleButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_favorite"
            android:checked="false"
            android:text=""
            android:textOff=""
            android:textOn=""
            app:layout_constraintTop_toTopOf="@id/upvoteTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>

        <TextView
            android:id="@+id/commentTittleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="48dp"
            android:text="@string/comment_tittle"
            android:textSize="@dimen/descTextSize"
            android:textColor="@color/secondary_text"
            app:layout_constraintTop_toBottomOf="@id/upvoteDesc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>

        <EditText
            android:id="@+id/commentEditText"
            android:hint="@string/comment_hint"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:selectAllOnFocus="true"
            android:gravity="top"
            android:singleLine="false"
            android:textSize="@dimen/descTextSize"
            app:layout_constraintTop_toBottomOf="@id/commentTittleTextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>

        <Button
            android:id="@+id/finish_check_in_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="25dp"
            android:background="@drawable/button_get_started"
            android:text="@string/check_in_button"
            android:textColor="@color/primary_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/commentEditText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>