<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="100dp"
    android:paddingBottom="100dp"
    android:background="@color/background"
    tools:context=".ui.settings.SettingsFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="25dp"
                android:text="@string/my_hometown_prompt"
                android:textSize="26sp"
                android:textColor="@color/primary_text"
                android:id="@+id/local_cities_title"/>

            <!-- Views to show when user have no local city and would like to make first entry -->
            <!-- Add -->
            <!-- Use id: "@+id/views_local_cities_add to set visibility -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:id="@+id/views_local_cities_add">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:gravity="center"
                    android:text="No home city(s) added."
                    android:textColor="@color/secondary_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse" />

                <Button
                    android:id="@+id/button_add_local_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:background="@drawable/button_get_started"
                    android:layout_gravity="center"
                    android:layout_margin="15sp"
                    android:text="Add"
                    android:textColor="@color/primary_dark"/>

                <TextView
                    android:id="@+id/textViewLocalCityPrompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15sp"
                    android:layout_gravity="center"
                    android:text="@string/add_local_city_prompt"
                    android:textColor="@color/secondary_text"/>

            </LinearLayout>

            <!-- Views to show when user have added local cities and would like to update them -->
            <!-- Update -->
            <!-- Use id: "@+id/views_local_cities_update to set visibility -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/views_local_cities_update">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="20dp"
                    android:textColor="@color/secondary_text"
                    android:textSize="20sp"
                    android:id="@+id/local_city_text_view" />
                <Button

                    android:id="@+id/button_update_local_city"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:background="@drawable/button_get_started"
                    android:layout_gravity="center"
                    android:layout_margin="15sp"
                    android:text="@string/update"
                    android:textColor="@color/primary_dark"/>
                <TextView
                    android:id="@+id/textViewLocalCityUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/update_your_local_city"
                    android:fontFamily="@font/google_sans_regular"
                    android:textColor="@color/secondary_text"/>
            </LinearLayout>

            <!-- Views to show when user have clicked add or update local cities button-->
            <!-- Use id: "@+id/edit_text_local_cities to set visibility -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:orientation="vertical"
                android:visibility="gone"
                android:id="@+id/edit_text_local_cities">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/enter_your_current_city"
                    android:textColorHint="@color/secondary_text"
                    android:id="@+id/enterLocalCityEditText"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:background="@drawable/button_get_started"
                    android:layout_gravity="center"
                    android:layout_margin="15sp"
                    android:id="@+id/button_enter_local_city"
                    android:text="Save"
                    android:textColor="@color/primary_dark"/>
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>